# zkp-web-gui

./: Cargo.toml  Dioxus.toml  README.md  config.toml  dx.toml  rustfmt.toml
.cargo/: config.toml
assets/styling/: main.css  navbar.css  search.css
src/: main.rs
src/components/: card.rs  dashboard.rs  mod.rs  search.rs  table.rs
src/config/: mod.rs
src/types/: task.rs
src/utils/: entry.rs  mod.rs  request.rs  signal.rs  table.rs  web3_subscriber.rs
src/utils/config/: mod.rs
src/views/: card.rs  dashboard.rs  home.rs  image_details.rs  mod.rs  navbar.rs  node_details.rs  task_details.rs
src/views/detailed/: image.rs  mod.rs  node.rs  task.rs  user.rs
src/views/home/: dashboard.rs  mod.rs  stats_summary.rs  task_summary.rs  task_tables.rs
