[package]
name = "zkp-web-gui"
version = "0.1.0"
authors = ["qozymandias <odowning19@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
reqwest = { version = "0.12.15", features = ["json"] } 
serde = "1.0.219"
serde_json = "1.0.140"
toml = "0.8.22"
once_cell = "1.21.3"
anyhow = "1.0.98"
tokio = { version = "1.45.0", features = ["macros"] }
tracing = "0.1.41"
console_error_panic_hook = "0.1.7"
chrono = "0.4.41"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
panic = "abort"

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
