[package]
name = "zkp-web-gui"
version = "0.1.0"
authors = ["qozymandias <odowning19@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.98"
serde_json = "1.0.140"
serde = "1.0.219"
tokio = { version = "1.45.1", features = ["macros"] }
reqwest = { version = "0.12.20", features = ["json", "multipart"] } 
chrono = "0.4.41"
once_cell = "1.21.3"
toml = "0.8.22"
tracing = "0.1.41"
console_error_panic_hook = "0.1.7"
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
zkp-service-helper = { git = "https://github.com/qozymandias/zkp-service-helper.git" }
getrandom = { version = "0.2", features = ["js"] }
num-bigint = "0.4.6"
hex = "0.4.3"
web-time = "1.1.0"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
panic = "abort"

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
